Mongo_db.yml
# k8s/prod/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-api-mongodb
spec:
  replicas: 1
      containers:
      - name: mongodb
        image: mongo:6.0
---
apiVersion: v1
kind: Service
metadata:
  name: clients-api-mongodb-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: clients-api-db
---
# k8s/prod/clients-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api-service
spec:
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: clients-api
