ingress_cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  tls:
  - hosts:
    - clients.api.deltacapita.com
    secretName: clients-api-tls 
  rules:
  - host: clients.api.deltacapita.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clients-api-service
            port:
              number: 80
